[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/consolas/CONSOLA.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://GameHUDRelated/PauseScreenPanel/HubPausePanel/HubPausePanel.gd" type="Script" id=2]
[ext_resource path="res://MiscRelated/PlayerGUI_Category_Related/ButtonStandard/PlayerGUI_ButtonStandard.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 15
font_data = ExtResource( 1 )

[node name="HubPausePanel" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 300, 200 )
size_flags_horizontal = 6
size_flags_vertical = 6
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 300.0
margin_bottom = 437.0
custom_constants/separation = 40

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_right = 300.0
margin_bottom = 47.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleLabel" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_left = 89.0
margin_right = 210.0
margin_bottom = 21.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 1 )
text = "Game Paused"

[node name="ModeLabel" type="Label" parent="VBoxContainer/VBoxContainer"]
margin_left = 106.0
margin_top = 31.0
margin_right = 194.0
margin_bottom = 47.0
size_flags_horizontal = 6
custom_fonts/font = SubResource( 2 )
text = "Game Mode: "

[node name="ContentContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 87.0
margin_right = 300.0
margin_bottom = 432.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ContentContainer"]
margin_right = 300.0
margin_bottom = 345.0
custom_constants/separation = 20

[node name="ResumeButton" parent="VBoxContainer/ContentContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_left = 94.0
margin_right = 205.0
margin_bottom = 49.0
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="GameControlsButton" parent="VBoxContainer/ContentContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_left = 94.0
margin_top = 69.0
margin_right = 205.0
margin_bottom = 118.0
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="GameSettingsButton" parent="VBoxContainer/ContentContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_left = 94.0
margin_top = 138.0
margin_right = 205.0
margin_bottom = 187.0
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="RestartButton" parent="VBoxContainer/ContentContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_left = 94.0
margin_top = 207.0
margin_right = 205.0
margin_bottom = 276.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_constants/margin_top = 20
text_for_label = "Restart Game"

[node name="MainMenuButton" parent="VBoxContainer/ContentContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_left = 94.0
margin_top = 296.0
margin_right = 205.0
margin_bottom = 345.0
size_flags_horizontal = 6
size_flags_vertical = 6
text_for_label = "Main Menu"
[connection signal="on_button_released_with_button_left" from="VBoxContainer/ContentContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_on_button_released_with_button_left"]
[connection signal="on_button_released_with_button_left" from="VBoxContainer/ContentContainer/VBoxContainer/GameControlsButton" to="." method="_on_GameControlsButton_on_button_released_with_button_left"]
[connection signal="on_button_released_with_button_left" from="VBoxContainer/ContentContainer/VBoxContainer/GameSettingsButton" to="." method="_on_GameSettingsButton_on_button_released_with_button_left"]
[connection signal="on_button_released_with_button_left" from="VBoxContainer/ContentContainer/VBoxContainer/RestartButton" to="." method="_on_RestartButton_on_button_released_with_button_left"]
[connection signal="on_button_released_with_button_left" from="VBoxContainer/ContentContainer/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_on_button_released_with_button_left"]
